--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,12 @@
     font-weight: 700 !important;
 }
 
+.text-2{
+    font-size: 17px !important;
+    color: rgb(82, 82, 82);
+    font-weight: 700 !important;
+}
+
 .phone15 {
     margin-top: -15px;
     margin-left: 120px;
@@ -48,7 +54,9 @@
     font-weight: 700 !important;
 }
 
-
+.icons {
+    background-color: rgb(228, 228, 252);
+}
 
 
 
